tests/toy/pos/000128_cdrc2.toylang
program a = { while a == a do while a do sleep; } .
