tests/toy/neg/000647_mutation.toylang
program a = { a = a == var; } .
